Revision history for Perl extension AnyEvent::RabbitMQ

        - Disable Nagle's algorithm in order to reduce latency. For RPC style
          applications this algorithm artificially introduces ~50ms of latency
          for full roundtrip, imposing a limit of only 25 calls/s. This change
          improves RPC throughput noticeably (even tenfold for fast servers).

        - Do message publish using a single socket write (instead of three).
          This improves throughput of small messages by 30%.

        - Fix that fact that the AMQP server can ask us to close the
          connection - we should respond with CloseOk and then
          not say anything further otherwise we get a SIGPIPE.

        - Fix a race condition stopping connections from closing properly.
          If you ask to open a channel, and then immediately try to close
          the connection then the not yet open channel would never remove
          itself from the associated connection, resulting in the connection
          never being terminated (as there were still channels associated with
          it).

        - Stop leaking all RabbitMQ messages recieved back inside
          a closure.

        - Fix a bug when closing a channel that is subscribed to multiple queues.

        - Allow multiple clients to have independent connections
          to RabbitMQ, as long as they all use the same spec file.

1.05    Tue Jul 22 16:55:55 2011
        - Fixed a compiling error.

1.04    Tue Jul 19 17:04:24 2011
        - Bug fix for consuming large messages.

1.03    Thu Apr  7 02:55:12 2011
        - Separate AnyEvent::RabbitMQ from Net::RabbitFoot.
        - Avoid (additional) issues when in global destruction.
        - Do not set reply_to to an empty string in the header frame.
        - Implement basic.reject (requires RabbitMQ >= 2.0.0).
        - Store server properties in the object for easy server product
          and sever version access.