@@ -9,7 +9,6 @@ requires 'AnyEvent';
 requires 'Devel::GlobalDestruction';
 requires 'namespace::clean';
 requires 'File::ShareDir';
-requires 'Readonly' => '1.03';
 
 tests 't/*.t';
 author_tests 'xt';
