@@ -1,5 +1,11 @@
 Revision history for Perl extension AnyEvent::RabbitMQ
 
+        - Defer finding the path of the included spec file in order to allow
+          programs to either provide a path for it or use another mechanism
+          to load the Net::AMQP protocol (like use Net::AMQP::Protocol::v0_8).
+          Otherwise, AnyEvent::RabbitMQ dies at compile time if the share dir
+          cannot be found, even if the protocol was already loaded.
+
         - Disable Nagle's algorithm in order to reduce latency. For RPC style
           applications this algorithm artificially introduces ~50ms of latency
           for full roundtrip, imposing a limit of only 25 calls/s. This change
